fix: custom emoji too small (#472)

--- a/src/components/chat-flow/two-lines-message/index.scss
+++ b/src/components/chat-flow/two-lines-message/index.scss
@@ -11,7 +11,7 @@
     font-size: 0.8em;
 
     img {
-        width: 0.8em;
-        height: 0.8em;
+        width: 1em;
+        height: 1em;
     }
 }
